objects/Account_LOB__c.object
<CustomObject>
    <fields>
        <fullName>Account_LOB_Id__c</fullName>
        <externalId>true</externalId>
        <label>Account LOB Id</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account LOBs</relationshipLabel>
        <relationshipName>Account_LOBs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charge_Last_Updated_On__c</fullName>
        <description>Used with the Long Length field to track when the last update was made.</description>
        <label>Charge Last Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_LOB_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default line of business to be used for bookings.</description>
        <label>Default LOB Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Trade_Date__c</fullName>
        <label>First Trade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Required__c</fullName>
        <formula>ISBLANK(Last_Collection_Date__c) || Last_Collection_Date__c &lt; (TODAY() - 90)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Collection_Date__c</fullName>
        <label>Last Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line of Business</label>
        <referenceTo>Line_of_Business__c</referenceTo>
        <relationshipLabel>Account LOBs</relationshipLabel>
        <relationshipName>Account_LOBs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Long_Length_Charge__c</fullName>
        <description>These values are manually loaded based on Universe Data so agents can advise customers when requesting quotes and bookings if required.</description>
        <inlineHelpText>This charge was introduced in July 2015 in line with other suppliers.
 
Charges are based on the Customers Divisional Account Tariff. 

The charge applies if an item is operationally scanned as a Long Length. (Has a 339B Scan Status in Ops Enquiry)</inlineHelpText>
        <label>Long Length Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Residential_Collection_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential Collection Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Delivery_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential Delivery Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transit_Liability_Charge__c</fullName>
        <description>Transit liability charge for the liability cover.</description>
        <label>Transit Liability Charge</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transit_Liability_Value__c</fullName>
        <description>Transit liability cover.</description>
        <label>Transit Liability Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Account LOB</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Account LOB Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account LOBs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>